--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -96,75 +96,16 @@ install:
   - if "%APPVEYOR_REPO_BRANCH%" == "master" set BOOST_BRANCH=master
 
 before_build:
-  - git clone --quiet -b %BOOST_BRANCH% --depth 1 https://github.com/boostorg/boost.git c:\projects\boost
-  - cd c:\projects\boost
-  - git branch
-  # List all (recursive) dependencies explicitly to control any new additions
-  - git submodule --quiet update --init tools/build
-  - git submodule --quiet update --init tools/boost_install
-  - git submodule --quiet update --init tools/boostdep
-  - git submodule --quiet update --init libs/headers
-  ## Direct (of GIL headers only)
-  - git submodule --quiet update --init libs/algorithm
-  - git submodule --quiet update --init libs/array
-  - git submodule --quiet update --init libs/assert
-  - git submodule --quiet update --init libs/concept_check
-  - git submodule --quiet update --init libs/config
-  - git submodule --quiet update --init libs/core
-  - git submodule --quiet update --init libs/crc
-  - git submodule --quiet update --init libs/filesystem
-  - git submodule --quiet update --init libs/integer
-  - git submodule --quiet update --init libs/iterator
-  - git submodule --quiet update --init libs/mp11
-  - git submodule --quiet update --init libs/mpl
-  - git submodule --quiet update --init libs/numeric/conversion
-  - git submodule --quiet update --init libs/preprocessor
-  - git submodule --quiet update --init libs/test
-  - git submodule --quiet update --init libs/type_traits
-  - git submodule --quiet update --init libs/variant
-  ## Transitive (of GIL tests too)
-  - git submodule --quiet update --init libs/atomic
-  - git submodule --quiet update --init libs/bind
-  - git submodule --quiet update --init libs/chrono
-  - git submodule --quiet update --init libs/container
-  - git submodule --quiet update --init libs/container_hash
-  - git submodule --quiet update --init libs/conversion
-  - git submodule --quiet update --init libs/detail
-  - git submodule --quiet update --init libs/exception
-  - git submodule --quiet update --init libs/function
-  - git submodule --quiet update --init libs/function_types
-  - git submodule --quiet update --init libs/fusion
-  - git submodule --quiet update --init libs/intrusive
-  - git submodule --quiet update --init libs/io
-  - git submodule --quiet update --init libs/lambda
-  - git submodule --quiet update --init libs/math
-  - git submodule --quiet update --init libs/move
-  - git submodule --quiet update --init libs/optional
-  - git submodule --quiet update --init libs/predef
-  - git submodule --quiet update --init libs/range
-  - git submodule --quiet update --init libs/ratio
-  - git submodule --quiet update --init libs/rational
-  - git submodule --quiet update --init libs/regex
-  - git submodule --quiet update --init libs/static_assert
-  - git submodule --quiet update --init libs/smart_ptr
-  - git submodule --quiet update --init libs/system
-  - git submodule --quiet update --init libs/throw_exception
-  - git submodule --quiet update --init libs/timer
-  - git submodule --quiet update --init libs/tuple
-  - git submodule --quiet update --init libs/type_index
-  - git submodule --quiet update --init libs/typeof
-  - git submodule --quiet update --init libs/unordered
-  - git submodule --quiet update --init libs/utility
-  - git submodule --quiet update --init libs/winapi
-  - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\gil
+  - cd ..
+  - bash -c '$APPVEYOR_BUILD_FOLDER/.ci/get-boost.sh $APPVEYOR_REPO_BRANCH $APPVEYOR_BUILD_FOLDER'
+  - cd boost-root
   - cmd /c bootstrap
-  - .\b2 headers
+  - .\b2 headers > NUL
   - if DEFINED GENERATOR .\b2 address-model=%AM% toolset=%TOOLSET% variant=%VARIANT% cxxstd=%CXXSTD% --with-filesystem --with-test stage
 
 build: off
 
 build_script:
-  - cd c:\projects\boost
   - if NOT DEFINED GENERATOR b2 address-model=%AM% toolset=%TOOLSET% variant=%VARIANT% cxxstd=%CXXSTD% libs/gil/test
   - if NOT DEFINED GENERATOR b2 address-model=%AM% toolset=%TOOLSET% variant=%VARIANT% cxxstd=%CXXSTD% libs/gil/toolbox/test
   - if NOT DEFINED GENERATOR b2 address-model=%AM% toolset=%TOOLSET% variant=%VARIANT% cxxstd=%CXXSTD% libs/gil/numeric/test
