--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -12,6 +12,7 @@ trigger:
   - master
   - develop
   - azure-pipelines
+  - ml/*
 
 jobs:
   - job: 'ubuntu1604_gcc5_cxx11_cmake'
@@ -58,7 +59,8 @@ jobs:
       - template: .ci/azure-pipelines/steps-install-boost.yml
       - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
         parameters:
-          use_conan: 'yes'
+          get_findboost: 'ON'
+          use_conan: 'ON'
 
   - job: 'win2016_vs2017_cxx17_cmake'
     pool:
@@ -75,8 +77,9 @@ jobs:
       - template: .ci/azure-pipelines/steps-install-boost.yml
       - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
         parameters:
-          use_conan: 'yes'
           cxxver: '17'
+          get_findboost: 'ON'
+          use_conan: 'ON'
 
   - job: 'win2012_vs2015_cmake'
     pool:
@@ -101,7 +104,8 @@ jobs:
       - template: .ci/azure-pipelines/steps-install-boost.yml
       - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
         parameters:
-          use_conan: 'yes'
+          get_findboost: 'ON'
+          use_conan: 'ON'
 
   - job: 'macos1013_xcode91_cmake'
     pool:
@@ -118,4 +122,4 @@ jobs:
           toolset: darwin
       - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
         parameters:
-          use_conan: 'yes'
+          use_conan: 'ON'
