--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ os:
 env:
   global:
     - secure: "UHit2f6Hq2pkHvx8rfrQvFacYiQKVO3vrCbNuDi/VSAIzQjRnqCqE06y4vpXLMsXf62TvBeCBStIuI8g+HP8B+f39oGb/9Om+yIgN/yes47R4sLFKFbRiOS6sfCIefJp7Kx7GSFf81xWxStpIU4QaSsk8Dlt5xyurTWXFSde+lQ="
-    - BOOST_BRANCH=develop && [ "$TRAVIS_BRANCH" == "master" ] && BOOST_BRANCH=master || true
 
   matrix:
     - BOGUS_JOB=true
 
 matrix:
+  fast_finish: true
   exclude:
     - env: BOGUS_JOB=true
   include:
@@ -195,74 +195,10 @@ install:
       pip install --user sphinx==1.7.9
     fi
   - cd ..
-  # NOTE: Here switch between master or develop depending on against which branch of Boost
-  #       super-project we want to test GIL
-  - git clone -b $BOOST_BRANCH --depth 1 https://github.com/boostorg/boost.git boost-root
+  - $TRAVIS_BUILD_DIR/.ci/get-boost.sh $TRAVIS_BRANCH $TRAVIS_BUILD_DIR
   - cd boost-root
-  - git branch
-  # List all (recursive) dependencies explicitly to control any new additions
-  - git submodule --quiet update --init tools/build
-  - git submodule --quiet update --init tools/boost_install
-  - git submodule --quiet update --init tools/boostdep
-  - git submodule --quiet update --init libs/headers
-  ## Direct (of GIL headers only)
-  - git submodule --quiet update --init libs/algorithm
-  - git submodule --quiet update --init libs/assert
-  - git submodule --quiet update --init libs/array
-  - git submodule --quiet update --init libs/concept_check
-  - git submodule --quiet update --init libs/config
-  - git submodule --quiet update --init libs/core
-  - git submodule --quiet update --init libs/crc
-  - git submodule --quiet update --init libs/filesystem
-  - git submodule --quiet update --init libs/integer
-  - git submodule --quiet update --init libs/iterator
-  - git submodule --quiet update --init libs/mp11
-  - git submodule --quiet update --init libs/mpl
-  - git submodule --quiet update --init libs/numeric/conversion
-  - git submodule --quiet update --init libs/preprocessor
-  - git submodule --quiet update --init libs/test
-  - git submodule --quiet update --init libs/type_traits
-  - git submodule --quiet update --init libs/variant
-  ## Transitive (of GIL tests too)
-  - git submodule --quiet update --init libs/atomic
-  - git submodule --quiet update --init libs/bind
-  - git submodule --quiet update --init libs/chrono
-  - git submodule --quiet update --init libs/container
-  - git submodule --quiet update --init libs/container_hash
-  - git submodule --quiet update --init libs/conversion
-  - git submodule --quiet update --init libs/detail
-  - git submodule --quiet update --init libs/exception
-  - git submodule --quiet update --init libs/function
-  - git submodule --quiet update --init libs/function_types
-  - git submodule --quiet update --init libs/fusion
-  - git submodule --quiet update --init libs/intrusive
-  - git submodule --quiet update --init libs/io
-  - git submodule --quiet update --init libs/lambda
-  - git submodule --quiet update --init libs/math
-  - git submodule --quiet update --init libs/move
-  - git submodule --quiet update --init libs/optional
-  - git submodule --quiet update --init libs/predef
-  - git submodule --quiet update --init libs/range
-  - git submodule --quiet update --init libs/ratio
-  - git submodule --quiet update --init libs/rational
-  - git submodule --quiet update --init libs/regex
-  - git submodule --quiet update --init libs/static_assert
-  - git submodule --quiet update --init libs/smart_ptr
-  - git submodule --quiet update --init libs/system
-  - git submodule --quiet update --init libs/throw_exception
-  - git submodule --quiet update --init libs/timer
-  - git submodule --quiet update --init libs/tuple
-  - git submodule --quiet update --init libs/type_index
-  - git submodule --quiet update --init libs/typeof
-  - git submodule --quiet update --init libs/unordered
-  - git submodule --quiet update --init libs/utility
-  - git submodule --quiet update --init libs/winapi
-  - rm -rf libs/gil
-  - mkdir libs/gil
-  - cp -r $TRAVIS_BUILD_DIR/* libs/gil
-  - cp -r $TRAVIS_BUILD_DIR/.ci libs/gil
+  - export BOOST_ROOT=$(pwd)
   - ./bootstrap.sh
-  - ./b2 headers
 
 script:
   - |-
