[numeric] Add unit test for matrix3x2<T> class
Additionally, in numeric.cpp:
- Add #include "unit_test.hpp" - proxy header common to all GIL tests.
- Tidy up copyright notice.

--- a/numeric/test/CMakeLists.txt
+++ b/numeric/test/CMakeLists.txt
@@ -9,9 +9,10 @@
 message(STATUS "Boost.GIL: Configuring Numeric extension tests")
 
 foreach(_name
+  matrix3x2
   numeric)
 
-  set(_target test_ext_${_name})
+  set(_target test_ext_numeric_${_name})
   add_executable(${_target} "")
   target_sources(${_target} PRIVATE ${_name}.cpp)
   target_link_libraries(${_target}
