--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,6 +17,18 @@ shallow_clone: true
 
 environment:
   matrix:
+    - TOOLSET: msvc-14.0
+      ARCH: x86_64
+      VARIANT: debug
+      CXXSTD: 11
+      TEST_HEADERS: 1
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    - TOOLSET: msvc-14.0
+      ARCH: x86_64
+      VARIANT: release
+      CXXSTD: 11
+      TEST_HEADERS: 1
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     - TOOLSET: msvc-14.1
       ARCH: x86_64
       VARIANT: debug
