--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ version: 2.0
 ##############################################################################
 # Docker images
 ##############################################################################
+docker_gcc48: &docker_gcc48
+  docker:
+    - image: gcc:4.8
 docker_gcc49: &docker_gcc49
   docker:
     - image: gcc:4.9
@@ -109,6 +112,11 @@ env_clang_cpp11_opt_speed: &env_clang_cpp11_opt_speed
 ##############################################################################
 # Build configurations
 ##############################################################################
+# GCC 4.8 is used to build `b2` driver
+config_gcc48_cpp11_opt_speed: &config_gcc48_cpp11_opt_speed
+  <<: *docker_gcc48
+  <<: *env_gcc_cpp11_opt_speed
+
 config_gcc49_cpp11_dbg: &config_gcc49_cpp11_dbg
   <<: *docker_gcc49
   <<: *env_gcc_cpp11_dbg
@@ -289,7 +297,9 @@ steps_test_io: &steps_test_io
 jobs:
   bootstrap_checkout:
     working_directory: ~/project/gil
-    <<: *config_gcc49_cpp11_opt_speed
+    # Build `b2` using the ancient compiler to hopefully avoid run-time failures:
+    # ./b2: /lib/x86_64-linux-gnu/libc.so.6: version `GLIBC_2.14' not found (required by ./b2)
+    <<: *config_gcc48_cpp11_opt_speed
     steps:
       - checkout
       - run:
@@ -308,7 +318,7 @@ jobs:
           paths: boost-root
 
   bootstrap_gcc:
-    <<: *config_gcc49_cpp11_opt_speed
+    <<: *config_gcc48_cpp11_opt_speed
     <<: *steps_bootstrap
 
   bootstrap_clang:
